Fix overflow bug with MyArticles Progress Tracker UI
The 5-step version could overflow out of the MyArticles box in some situations. In Firefox and Chrome I could only replicate this by making the screen narrow, but I observed in from a screensharing user even with a window wide enough to include margins.

This quick fix will add a scroll within the Progress Tracker component if it's going to overflow.

--- a/app/assets/stylesheets/modules/_my_articles.styl
+++ b/app/assets/stylesheets/modules/_my_articles.styl
@@ -82,6 +82,7 @@
   .flow
     border-top 1px solid #EDEDED
     display flex
+    overflow auto
     .step
       align-items center
       border-right 1px solid rgb(225,225,225)
